# The-Skill-Thief

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  release.yml
features/: environment.py  skill_thief.feature
features/steps/: skill_thief_steps.py
src/skill_thief/: __init__.py  cli.py  config.py  gitutils.py  install.py  validate.py
src/skill_thief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
